--- a/portfolio_main/index.html
+++ b/portfolio_main/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design cafe</title>
+    <title>Aki design</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
@@ -65,15 +65,17 @@
             </div>
             <section class="concept" id="concept">
                 <div class="concept_background">
-                    <h2>おもい</h2>
-                    <p>人と人とのかさなりはすごいチカラ。<br>
-                        手を取り合うことで<br>
-                        ひとりでは描けなかった<br>
-                        想像以上の世界を描ことができる。<br>
-                        そして思ってもみなかった景色を見ることができる。<br>
-                        人生はかさなりで彩られる。<br>
-                        私はかさなるを大切にしています。<br>
-                    </p>
+                    <div class="concept_background_2">
+                        <h2>おもい</h2>
+                        <p>人と人とのかさなりはすごいチカラ。<br>
+                            手を取り合うことで<br>
+                            ひとりでは描けなかった<br>
+                            想像以上の世界を描ことができる。<br>
+                            そして思ってもみなかった景色を見ることができる。<br>
+                            人生はかさなりで彩られる。<br>
+                            私はかさなるを大切にしています。<br>
+                        </p>
+                    </div>
                 </div>
             </section>
             <section class="contents" id="contents">
@@ -84,6 +86,7 @@
             <section class="about" id="about">
                 <div>
                     <img class="about_background_color" src="images/img/wave_gr_1.png" alt="波模様green_1">
+                    <div class="about_background_color_2"></div>
                     <h2>私について</h2>
                     <ul>
                         <li>
@@ -198,37 +201,38 @@
         </main>
 
         <footer>
-            <div class="circle_footer"></div>
-            <div class="scrollup"><span>Top</span></div>
-            <div class="arrow_up_1"></div>
-            <div class="arrow_up_2"></div>
-            <img class="background_wave" src="images/img/wave_main.png" alt="背景波模様">
-            <div class="footer">
+            <div class="footer_era">
+                <div class="circle_footer"></div>
+                <div class="scrollup"><span>Top</span></div>
+                <div class="arrow_up_1"></div>
+                <div class="arrow_up_2"></div>
+                <img class="background_wave" src="images/img/wave_main.png" alt="背景波模様">
+                <div class="footer">
 
-                <a href="#header_a">
+                    <a href="#header_a">
 
-                    <ul class="footer_a">
-                        <li><a href="#home">ホーム</a></li>
-                        <li><a href="#concept">おもい</a></li>
-                        <li><a href="#contents">コンテンツ</a></li>
-                        <li><a href="#about">私について</a></li>
-                        <li><a href="#works">つくったもの</a></li>
-                        <li><a href="#contact">お問い合わせ</a></li>
+                        <ul class="footer_a">
+                            <li><a href="#home">ホーム</a></li>
+                            <li><a href="#concept">おもい</a></li>
+                            <li><a href="#contents">コンテンツ</a></li>
+                            <li><a href="#about">私について</a></li>
+                            <li><a href="#works">つくったもの</a></li>
+                            <li><a href="#contact">お問い合わせ</a></li>
+                        </ul>
+                    </a>
+                    <ul class="sns_rnk">
+                        <li class="instagram_icon">
+                            <img src="images/img/Instagram_icon.svg" alt="Instagram">
+                        </li>
+                        <li class="x_icon">
+                            <img src="images/img/X_icon.png" alt="X">
+                        </li>
                     </ul>
-                </a>
-                <ul class="sns_rnk">
-                    <li class="instagram_icon">
-                        <img src="images/img/Instagram_icon.svg" alt="Instagram">
-                    </li>
-                    <li class="x_icon">
-                        <img src="images/img/X_icon.png" alt="X">
-                    </li>
-                </ul>
-                <ul class="copyright">
-                    <p>©️ Aki design All Right Reserved</p>
-                </ul>
+                    <ul class="copyright">
+                        <p>©️ Aki design All Right Reserved</p>
+                    </ul>
+                </div>
             </div>
-
         </footer>
     </div>
     <script>
