--- a/portfolio_main/index.html
+++ b/portfolio_main/index.html
@@ -84,9 +84,9 @@
 
             </section>
             <section class="about" id="about">
-                <div>
-                    <img class="about_background_color" src="images/img/wave_gr_1.png" alt="波模様green_1">
-                    <div class="about_background_color_2"></div>
+                <div class="about_contents">
+                    <!-- <img class="about_background_color" src="images/img/wave_gr_1.png" alt="波模様green_1"> -->
+                    <!-- <div class="about_background_color_2"></div> -->
                     <h2>私について</h2>
                     <ul>
                         <li>
