コンタクトを修正

--- a/portfolio_main/index.html
+++ b/portfolio_main/index.html
@@ -188,14 +188,17 @@
             <section class="contact" id="contact">
                 <div class="circle"></div>
                 <h2>お問い合わせ</h2>
-                <div class="contact_drawing">
-                    <img src="images/img/問い合わせ仮.png" alt="親子">
-                </div>
-                <div class="contact_parts">
-                    <ul>
-                        <li class="contact_btn"><a href="#contactform"></a>お問い合わせはこちらから</li>
-                        <li class="mail_icon"><img src="images/img/mail_icon.svg" alt="メールアイコン"></li>
-                    </ul>
+                <div class="contact_contents">
+                    <div class="contact_parts">
+                        <ul>
+                            <li class="contact_btn"><a href="#contactform"></a>お問い合わせはこちらから</li>
+                            <li class="mail_icon"><img src="images/img/mail_icon.svg" alt="メールアイコン"></li>
+                        </ul>
+                    </div>
+                    <div class="contact_drawing">
+                        <img src="images/img/問い合わせ仮.png" alt="親子">
+                    </div>
+
                 </div>
             </section>
         </main>
