矢印部分を今から修正

--- a/portfolio_main/index.html
+++ b/portfolio_main/index.html
@@ -64,8 +64,8 @@
                 <div class="scrolldown"><span>Scroll</span></div>
             </div>
             <section class="concept" id="concept">
-                <div class="concept_background">
-                    <div class="concept_background_2">
+                <div>
+                    <div class="concept_background">
                         <h2>おもい</h2>
                         <p>人と人とのかさなりはすごいチカラ。<br>
                             手を取り合うことで<br>
@@ -163,53 +163,55 @@
 
             <section class="works" id="works">
                 <h2>つくったもの</h2>
-                <div class="container_1"></div>
-                <ul class="web_design">
+                <div class="container_1">
+                    <div class="web_design">
 
-                    <li><img class="web_design_image" id="works_Web_design" src="images/img/works_web.jpg"
+                        <img class="web_design_image" id="works_Web_design" src="images/img/works_web.jpg"
                             alt="ウェブデザイン">
-                    </li>
-                    <li class="more_1">more</li>
-                    <li class="web">Web Design</li>
-                </ul>
 
-                <div class="container_2"></div>
-                <ul class="glass_art">
-                    <li>
-                        <img class="glass_art_image" id="works_Glass_Art" src="images/img/works_Glassart@2x-80.jpg"
-                            alt="グラスアート">
-                    </li>
-                    <li class="more_2">more</li>
-                    <li class="glass">Glass Art</li>
+                        <p class="more_1">more</p>
+                    </div>
+                    <h3 class="web">Web Design</h3>
+                    </ul>
+
+                    <div class="container_2"></div>
+                    <ul class="glass_art">
+                        <li>
+                            <img class="glass_art_image" id="works_Glass_Art" src="images/img/works_Glassart@2x-80.jpg"
+                                alt="グラスアート">
+                        </li>
+                        <li class="more_2">more</li>
+                        <li class="glass">Glass Art</li>
 
 
-                </ul>
+                    </ul>
             </section>
             <section class="contact" id="contact">
-                <div class="circle"></div>
-                <div class="contact_contents">
-                    <div class="contact_parts">
-                        <h2>お問い合わせ</h2>
-                        <ul>
-                            <li class="contact_btn"><a href="#contactform"></a>お問い合わせはこちらから</li>
-                            <li class="mail_icon"><img src="images/img/mail_icon.svg" alt="メールアイコン"></li>
-                        </ul>
-                    </div>
-                    <div class="contact_drawing">
-                        <img src="images/img/問い合わせ仮.png" alt="親子">
-                    </div>
+                <div class="circle">
+                    <div class="contact_contents">
+                        <div class="contact_parts">
+                            <h2>お問い合わせ</h2>
+                            <ul>
+                                <li class="contact_btn"><a href="#contactform"></a>お問い合わせはこちらから</li>
+                                <li class="mail_icon"><img src="images/img/mail_icon.svg" alt="メールアイコン"></li>
+                            </ul>
+                        </div>
+                        <div class="contact_drawing">
+                            <img src="images/img/問い合わせ仮.png" alt="親子">
+                        </div>
 
+                    </div>
                 </div>
             </section>
         </main>
 
+        <div class="circle_footer"></div>
+        <div class="scrollup"><span>Top</span></div>
+        <div class="arrow_up_1"></div>
+        <div class="arrow_up_2"></div>
         <footer>
             <div class="footer_era">
-                <div class="circle_footer"></div>
-                <div class="scrollup"><span>Top</span></div>
-                <div class="arrow_up_1"></div>
-                <div class="arrow_up_2"></div>
-                <img class="background_wave" src="images/img/wave_main.png" alt="背景波模様">
+                <!-- <img class="background_wave" src="images/img/wave_main.png" alt="背景波模様"> -->
                 <div class="footer">
 
                     <a href="#header_a">
