--- a/portfolio_webdesign/index.html
+++ b/portfolio_webdesign/index.html
@@ -13,139 +13,163 @@
 
 
 <body>
+    <div class="container">
+        <header id="header">
+            <div class="header_wrap">
+                <h1 class="header_logo">Aki Design</h1>
+                <nav class="header_pc_nav">
+                    <ul class="header_pc_ul">
+                        <li><a href="#home">ホーム</a></li>
+                        <li><a href="#concept">コンセプト</a></li>
+                        <li><a href="#contents">コンテンツ</a></li>
+                        <li><a href="#about">私について</a></li>
+                        <li><a href="#works">つくったもの</a></li>
+                        <ul>
+                            <li>
+                                <a href="">Web Design</a>
+                            </li>
+                            <li>
+                                <a href="">Glass Art</a>
+                            </li>
+                        </ul>
 
-    <header id="header">
-        <div class="header_wrap">
-            <h1 class="header_logo">Aki Design</h1>
-            <nav class="header_nav">
-                <ul class="header_ul">
-                    <li><a href="#home">ホーム</a></li>
-                    <li><a href="#concept">コンセプト</a></li>
-                    <li><a href="#contents">コンテンツ</a></li>
-                    <li><a href="#about">私について</a></li>
-                    <li><a href="#works">つくったもの</a></li>
-                    <li><a href="#contact">お問い合わせ</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-
-        <h2 class="works_title">つくったもの</h2>
-        <h3 class="works_sbtitle">Web Design</h3>
-
-        <div class="container">
-
-            <div class="item">
-                <img src="imgs/burger_rich.jpg" alt="高級感のあるハンバーガーバナー">
-                <div class="line_left">
-                    <h4>激旨バーガー/高級感デザイン(模擬)</h4>
+                        <li><a href="#contact">お問い合わせ</a></li>
+                    </ul>
+                </nav>
+                <div class="sp_btn">
+                    <span></span>
                 </div>
-                <div class="square_yellow">
-                    <p class="banner_tag">バナー制作</p>
-                </div>
-
-                <p class="banner_p_1">制作時期 2024年4月</p>
-                <p class="banner_p_2">担当範囲 デザイン</p>
+                <nav class="header_sp_nav">
+                    <div class="home_sp_circle"><img src="imgs/blob.svg" alt="青い丸">
+                        <ul class="header_sp_ul">
+                            <li><a href="#home">ホーム</a></li>
+                            <li><a href="#concept">コンセプト</a></li>
+                            <li><a href="#contents">コンテンツ</a></li>
+                            <li><a href="#about">私について</a></li>
+                            <li><a href="#works">つくったもの</a></li>
+                            <li><a href="#contact">お問い合わせ</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
+        </header>
+        <main>
 
-            <div class="item">
-                <img src="imgs/burger_pop.jpg" alt="POPなハンバーガーバナー">
-                <div class="line_left">
-                    <h4>激旨バーガー/POPデザイン(模擬)</h4>
+            <h2 class="works_title">つくったもの</h2>
+            <h3 class="works_sbtitle">Web Design</h3>
+
+            <div class="container_item">
+
+                <div class="item">
+                    <img src="imgs/burger_rich.jpg" alt="高級感のあるハンバーガーバナー">
+                    <div class="line_left">
+                        <h4>激旨バーガー/高級感デザイン(模擬)</h4>
+                    </div>
+                    <div class="square_yellow">
+                        <p class="banner_tag">バナー制作</p>
+                    </div>
+
+                    <p class="banner_p_1">制作時期 2024年4月</p>
+                    <p class="banner_p_2">担当範囲 デザイン</p>
                 </div>
-                <div class="square_yellow">
-                    <p class="banner_tag">バナー制作</p>
+
+                <div class="item">
+                    <img src="imgs/burger_pop.jpg" alt="POPなハンバーガーバナー">
+                    <div class="line_left">
+                        <h4>激旨バーガー/POPデザイン(模擬)</h4>
+                    </div>
+                    <div class="square_yellow">
+                        <p class="banner_tag">バナー制作</p>
+                    </div>
+
+                    <p class="banner_p_1">制作時期 2024年4月</p>
+                    <p class="banner_p_2">担当範囲 デザイン</p>
+
                 </div>
+                <div class="item">
+                    <img src="imgs/salon_hp.jpg" alt="美容室HP">
+                    <div class="line_left">
+                        <h4>美容室のコーポレートサイト(模擬)</h4>
+                    </div>
+                    <div class="square_blue">
+                        <p class="site_tag">サイト制作</p>
+                    </div>
 
-                <p class="banner_p_1">制作時期 2024年4月</p>
-                <p class="banner_p_2">担当範囲 デザイン</p>
+                    <p class="banner_p_1">制作時期 2024年5月</p>
+                    <p class="banner_p_2">担当範囲 デザイン</p>
 
+                </div>
+                <div class="item">
+                    <img src="imgs/LP-80.jpg" alt="LP制作">
+                    <div class="line_left">
+                        <h4>コワーキングスペースLP</h4>
+                    </div>
+                    <div class="square_blue">
+                        <p class="LP_tag">LP制作</p>
+                    </div>
+
+                    <p class="banner_p_1"></p>制作時期 2024年5月
+                    <p class="banner_p_2">模写</p>
+
+                </div>
+                <div class="item">
+                    <img class="SP_mock_img" src="imgs/banner.jpg" alt="旅行情報アプリ">
+                    <div class="line_left">
+                        <h4>旅行情報アプリ</h4>
+                    </div>
+                    <div class="square_yellow">
+                        <p class="banner_tag">バナー制作</p>
+                    </div>
+
+                    <p class="banner_p_1">制作時期 2024年4月</p>
+                    <p class="banner_p_2">模写</p>
+
+                </div>
+                <div class="item">
+                    <img src="imgs/designcafe.jpg" alt="デザインカフェサイト">
+                    <div class="line_left">
+                        <h4>デザインカフェサイト</h4>
+                    </div>
+                    <div class="square_green">
+                        <p class="coding_tag">コーディング</p>
+                    </div>
+
+                    <p class="banner_p_1">制作時期 2024年7月</p>
+                    <p class="banner_p_2">担当範囲 模写コーディング</p>
+
+                </div>
             </div>
-            <div class="item">
-                <img src="imgs/salon_hp.jpg" alt="美容室HP">
-                <div class="line_left">
-                    <h4>美容室のコーポレートサイト(模擬)</h4>
-                </div>
-                <div class="square_blue">
-                    <p class="site_tag">サイト制作</p>
-                </div>
+            <div id="grayDisplay"></div>
+        </main>
+        <footer>
+            <div class="footer_era">
+                <div class="footer">
+                    <a href="#header_a">
 
-                <p class="banner_p_1">制作時期 2024年5月</p>
-                <p class="banner_p_2">担当範囲 デザイン</p>
-
+                        <ul class="footer_a">
+                            <li><a href="#home">ホーム</a></li>
+                            <li><a href="#concept">おもい</a></li>
+                            <li><a href="#contents">コンテンツ</a></li>
+                            <li><a href="#about">私について</a></li>
+                            <li><a href="#works">つくったもの</a></li>
+                            <li><a href="#contact">お問い合わせ</a></li>
+                        </ul>
+                    </a>
+                    <ul class="sns_rnk">
+                        <li class="instagram_icon">
+                            <img src="imgs/Instagram_icon.svg" alt="Instagram">
+                        </li>
+                        <li class="x_icon">
+                            <img src="imgs/X_icon.png" alt="X">
+                        </li>
+                    </ul>
+                    <ul class="copyright">
+                        <p>©️ Aki design All Right Reserved</p>
+                    </ul>
+                </div>
             </div>
-            <div class="item">
-                <img src="imgs/LP-80.jpg" alt="LP制作">
-                <div class="line_left">
-                    <h4>コワーキングスペースLP</h4>
-                </div>
-                <div class="square_blue">
-                    <p class="LP_tag">LP制作</p>
-                </div>
-
-                <p class="banner_p_1"></p>制作時期 2024年5月
-                <p class="banner_p_2">模写</p>
-
-            </div>
-            <div class="item">
-                <img class="SP_mock_img" src="imgs/banner.jpg" alt="旅行情報アプリ">
-                <div class="line_left">
-                    <h4>旅行情報アプリ</h4>
-                </div>
-                <div class="square_yellow">
-                    <p class="banner_tag">バナー制作</p>
-                </div>
-
-                <p class="banner_p_1">制作時期 2024年4月</p>
-                <p class="banner_p_2">模写</p>
-
-            </div>
-            <div class="item">
-                <img src="imgs/designcafe.jpg" alt="デザインカフェサイト">
-                <div class="line_left">
-                    <h4>デザインカフェサイト</h4>
-                </div>
-                <div class="square_green">
-                    <p class="coding_tag">コーディング</p>
-                </div>
-
-                <p class="banner_p_1">制作時期 2024年7月</p>
-                <p class="banner_p_2">担当範囲 模写コーディング</p>
-
-            </div>
-        </div>
-    </main>
-    <footer>
-
-        <img class="background_wave" src="imgs/wave_main.png" alt="背景波模様">
-        <div class="footer">
-
-            <a href="#header_a">
-
-                <ul class="footer_a">
-                    <li><a href="#home">ホーム</a></li>
-                    <li><a href="#concept">おもい</a></li>
-                    <li><a href="#contents">コンテンツ</a></li>
-                    <li><a href="#about">私について</a></li>
-                    <li><a href="#works">つくったもの</a></li>
-                    <li><a href="#contact">お問い合わせ</a></li>
-                </ul>
-            </a>
-            <ul class="sns_rnk">
-                <li class="instagram_icon">
-                    <img src="imgs/Instagram_icon.svg" alt="Instagram">
-                </li>
-                <li class="x_icon">
-                    <img src="imgs/X_icon.svg" alt="X">
-                </li>
-            </ul>
-            <ul class="copyright">
-                <p>©️ Aki design All Right Reserved</p>
-            </ul>
-        </div>
-
-    </footer>
+        </footer>
+    </div>
     <script>
 
 
