--- a/portfplio_thankspage/index.html
+++ b/portfplio_thankspage/index.html
@@ -12,59 +12,76 @@
 </head>
 
 <body>
-    <header id="header">
-        <div class="header_wrap">
-            <h1 class="header_logo">Aki Design</h1>
-            <nav class="header_nav">
-                <ul class="header_ul">
+    <div class="container">
+        <header id="header">
+            <div class="header_wrap">
+                <h1 class="header_logo">Aki Design</h1>
+                <nav class="header_pc_nav">
+                    <ul class="header_pc_ul">
+                        <li><a href="#home">ホーム</a></li>
+                        <li><a href="#concept">コンセプト</a></li>
+                        <li><a href="#contents">コンテンツ</a></li>
+                        <li><a href="#about">私について</a></li>
+                        <li><a href="#works">つくったもの</a></li>
+                        <li><a href="#contact">お問い合わせ</a></li>
+                    </ul>
+                </nav>
+                <div class="sp_btn">
+                    <span></span>
+                </div>
+                <nav class="header_sp_nav">
+                    <div class="home_sp_circle"><img src="images/blob.svg" alt="青い丸">
+                        <ul class="header_sp_ul">
+                            <li><a href="#home">ホーム</a></li>
+                            <li><a href="#concept">コンセプト</a></li>
+                            <li><a href="#contents">コンテンツ</a></li>
+                            <li><a href="#about">私について</a></li>
+                            <li><a href="#works">つくったもの</a></li>
+                            <li><a href="#contact">お問い合わせ</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <main>
+            <div class="message">
+                <p class="message_pc_p">お問い合わせありがとうございました。<br>
+                    追ってご連絡いたします。</p>
+                <p class="message_sp_p">お問い合わせ<br>ありがとうございました。<br>
+                    追ってご連絡いたします。</p>
+            </div>
+            <div class="submit">
+                <button type="submit">ホームへ戻る</button>
+            </div>
+        </main>
+    </div>
+</body>
+<footer>
+    <div class="footer_era">
+        <div class="footer">
+            <a href="#header_a">
+
+                <ul class="footer_a">
                     <li><a href="#home">ホーム</a></li>
-                    <li><a href="#concept">コンセプト</a></li>
+                    <li><a href="#concept">おもい</a></li>
                     <li><a href="#contents">コンテンツ</a></li>
                     <li><a href="#about">私について</a></li>
                     <li><a href="#works">つくったもの</a></li>
                     <li><a href="#contact">お問い合わせ</a></li>
                 </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="message">
-            <p class="message_p">お問い合わせありがとうございました。<br>
-                追ってご連絡いたします。</p>
-        </div>
-        <div class="submit">
-            <button type="submit">ホームへ戻る</button>
-        </div>
-    </main>
-
-
-</body>
-<footer>
-    <img class="background_wave" src="images/wave_main.png" alt="背景波模様">
-    <div class="footer">
-
-        <a href="#header_a">
-
-            <ul class="footer_a">
-                <li><a href="#home">ホーム</a></li>
-                <li><a href="#concept">おもい</a></li>
-                <li><a href="#contents">コンテンツ</a></li>
-                <li><a href="#about">私について</a></li>
-                <li><a href="#works">つくったもの</a></li>
-                <li><a href="#contact">お問い合わせ</a></li>
+            </a>
+            <ul class="sns_rnk">
+                <li class="instagram_icon">
+                    <img src="images/Instagram_icon.svg" alt="Instagram">
+                </li>
+                <li class="x_icon">
+                    <img src="images/X_icon.svg" alt="X">
+                </li>
             </ul>
-        </a>
-        <ul class="sns_rnk">
-            <li class="instagram_icon">
-                <img src="images/Instagram_icon.svg" alt="Instagram">
-            </li>
-            <li class="x_icon">
-                <img src="images/X_icon.svg" alt="X">
-            </li>
-        </ul>
-        <ul class="copyright">
-            <p>©️ Aki design All Right Reserved</p>
-        </ul>
+            <ul class="copyright">
+                <p>©️ Aki design All Right Reserved</p>
+            </ul>
+        </div>
     </div>
 </footer>
 
