--- a/portfolio_webdesign/index.html
+++ b/portfolio_webdesign/index.html
@@ -23,13 +23,13 @@
                         <li><a href="#concept">コンセプト</a></li>
                         <li><a href="#contents">コンテンツ</a></li>
                         <li><a href="#about">私について</a></li>
-                        <li><a href="#works">つくったもの</a></li>
-                        <ul>
+                        <li class="hnavi_list"><a href="#works">つくったもの</a></li>
+                        <ul class="dropdown_lists">
                             <li>
-                                <a href="">Web Design</a>
+                                <a href="#web_design">Web Design</a>
                             </li>
                             <li>
-                                <a href="">Glass Art</a>
+                                <a href="#glass_art">Glass Art</a>
                             </li>
                         </ul>
 
