--- a/portfolio_webdesign/index.html
+++ b/portfolio_webdesign/index.html
@@ -19,6 +19,7 @@
                 <h1 class="header_logo">Aki Design</h1>
                 <nav class="header_pc_nav">
                     <ul class="header_pc_ul">
+                        <li><a href="../portfolio_glassart/index.html">test</a></li>
                         <li><a href="#home">ホーム</a></li>
                         <li><a href="#concept">コンセプト</a></li>
                         <li><a href="#contents">コンテンツ</a></li>
