--- a/portfolio _contact/index.html
+++ b/portfolio _contact/index.html
@@ -18,26 +18,32 @@
                 <h1 class="header_logo">Aki Design</h1>
                 <nav class="header_pc_nav">
                     <ul class="header_pc_ul">
-                        <li><a href="#home">ホーム</a></li>
-                        <li><a href="#concept">コンセプト</a></li>
-                        <li><a href="#contents">コンテンツ</a></li>
-                        <li><a href="#about">私について</a></li>
-                        <li><a href="#works">つくったもの</a></li>
-                        <li><a href="#contact">お問い合わせ</a></li>
+
+                        <li><a href="../index.html#home">ホーム</a></li>
+                        <li><a href="../index.html#concept">コンセプト</a></li>
+                        <li><a href="../index.html#contents">コンテンツ</a></li>
+                        <li><a href="../index.html#about">私について</a></li>
+                        <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
+
+
+                        <li><a href="../index.html#contact">お問い合わせ</a></li>
                     </ul>
                 </nav>
                 <div class="sp_btn">
                     <span></span>
                 </div>
                 <nav class="header_sp_nav">
-                    <div class="home_sp_circle"><img src="img/blob.svg" alt="青い丸">
+                    <div class="home_sp_circle"><img src="img/blue_circle.svg" alt="青い丸">
                         <ul class="header_sp_ul">
-                            <li><a href="#home">ホーム</a></li>
-                            <li><a href="#concept">コンセプト</a></li>
-                            <li><a href="#contents">コンテンツ</a></li>
-                            <li><a href="#about">私について</a></li>
-                            <li><a href="#works">つくったもの</a></li>
-                            <li><a href="#contact">お問い合わせ</a></li>
+
+                            <li><a href="../index.html#home">ホーム</a></li>
+                            <li><a href="../index.html#concept">コンセプト</a></li>
+                            <li><a href="../index.html#contents">コンテンツ</a></li>
+                            <li><a href="../index.html#about">私について</a></li>
+                            <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
+
+
+                            <li><a href="../index.html#contact">お問い合わせ</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -48,21 +54,25 @@
                 <h2 class="contact_title">お問い合わせ</h2>
                 <h3 class="contact_sbtitle">以下の項目に必要事項をお書きください。</h3>
 
-                <form class="c-form">
+                <form class="c-form"
+                    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSf9EOnATQu6C0Db_uqUpnjcTxgpzE9GraVqISb4ulfxNKiaUw/formResponse"
+                    method="post">
                     <div class="c-form__item">
+
                         <input class="c-form__input" id="field-name" placeholder="お名前" type="text"
-                            required="required" />
+                            name="entry.885758725" required />
                     </div>
                     <div class="c-form__item">
-                        <input class="c-form__input" id="field-kana" placeholder="ふりがな" type="kana"
-                            required="required" />
+                        <input class="c-form__input" id="field-kana" placeholder="ふりがな" type="text"
+                            name="entry.1166266464" required />
                     </div>
                     <div class="c-form__item">
                         <input class="c-form__input" id="field-mail" placeholder="メールアドレス/sample@gmail.com" type="email"
-                            required="required" />
+                            name="entry.1566290371" required />
                     </div>
                     <div class="c-form__item">
-                        <textarea class="c-form__input" id="field-message" placeholder="お問い合わせ内容"></textarea>
+                        <textarea class="c-form__input" id="field-message" placeholder="お問い合わせ内容" name="entry.748657527"
+                            required></textarea>
                     </div>
                     <div class="c-form__submit">
                         <button type="submit">送信</button>
@@ -76,17 +86,18 @@
 <footer>
     <div class="footer_era">
         <div class="footer">
-            <a href="#header_a">
-
+            <nav class="footer_nav">
                 <ul class="footer_a">
-                    <li><a href="#home">ホーム</a></li>
-                    <li><a href="#concept">おもい</a></li>
-                    <li><a href="#contents">コンテンツ</a></li>
-                    <li><a href="#about">私について</a></li>
-                    <li><a href="#works">つくったもの</a></li>
-                    <li><a href="#contact">お問い合わせ</a></li>
+                    <li><a href="../index.html#home">ホーム</a></li>
+                    <li><a href="../index.html#concept">コンセプト</a></li>
+                    <li><a href="../index.html#contents">コンテンツ</a></li>
+                    <li><a href="../index.html#about">私について</a></li>
+                    <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
+
+
+                    <li><a href="../index.html#contact">お問い合わせ</a></li>
                 </ul>
-            </a>
+            </nav>
             <ul class="sns_rnk">
                 <li class="instagram_icon">
                     <img src="img/Instagram_icon.svg" alt="Instagram">
@@ -101,5 +112,19 @@
         </div>
     </div>
 </footer>
+<script>
+    $(function () {
+        $('.sp_btn').on('click', function () {
+            $('.sp_btn').toggleClass('open');
+            $('.header_sp_nav').fadeToggle();
+        });
+        $('.header_sp_nav a').on('click', function () {
+            $('.header_sp_nav').fadeOut();
+            $('.sp_btn').removeClass('open');
+        });
+    });
+
+
+</script>
 
 </html>
