--- a/portfolio _contact/index.html
+++ b/portfolio _contact/index.html
@@ -56,7 +56,7 @@
 
                 <form class="c-form"
                     action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSf9EOnATQu6C0Db_uqUpnjcTxgpzE9GraVqISb4ulfxNKiaUw/formResponse"
-                    method="post">
+                    method="post" target="hidden_iframe" onsubmit="submitted=true;">
                     <div class="c-form__item">
 
                         <input class="c-form__input" id="field-name" placeholder="お名前" type="text"
@@ -82,49 +82,54 @@
         </main>
     </div>
 
-</body>
-<footer>
-    <div class="footer_era">
-        <div class="footer">
-            <nav class="footer_nav">
-                <ul class="footer_a">
-                    <li><a href="../index.html#home">ホーム</a></li>
-                    <li><a href="../index.html#concept">コンセプト</a></li>
-                    <li><a href="../index.html#contents">コンテンツ</a></li>
-                    <li><a href="../index.html#about">私について</a></li>
-                    <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
+    <footer>
+        <div class="footer_era">
+            <div class="footer">
+                <nav class="footer_nav">
+                    <ul class="footer_a">
+                        <li><a href="../index.html#home">ホーム</a></li>
+                        <li><a href="../index.html#concept">コンセプト</a></li>
+                        <li><a href="../index.html#contents">コンテンツ</a></li>
+                        <li><a href="../index.html#about">私について</a></li>
+                        <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
 
 
-                    <li><a href="../index.html#contact">お問い合わせ</a></li>
+                        <li><a href="../index.html#contact">お問い合わせ</a></li>
+                    </ul>
+                </nav>
+                <ul class="sns_rnk">
+                    <li class="instagram_icon">
+                        <img src="img/Instagram_icon.svg" alt="Instagram">
+                    </li>
+                    <li class="x_icon">
+                        <img src="img/X_icon.svg" alt="X">
+                    </li>
                 </ul>
-            </nav>
-            <ul class="sns_rnk">
-                <li class="instagram_icon">
-                    <img src="img/Instagram_icon.svg" alt="Instagram">
-                </li>
-                <li class="x_icon">
-                    <img src="img/X_icon.svg" alt="X">
-                </li>
-            </ul>
-            <ul class="copyright">
-                <p>©️ Aki design All Right Reserved</p>
-            </ul>
+                <ul class="copyright">
+                    <p>©️ Aki design All Right Reserved</p>
+                </ul>
+            </div>
         </div>
-    </div>
-</footer>
-<script>
-    $(function () {
-        $('.sp_btn').on('click', function () {
-            $('.sp_btn').toggleClass('open');
-            $('.header_sp_nav').fadeToggle();
+    </footer>
+    <script type="text/javascript">
+        let submitted = false;
+    </script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none"
+        onload="if(submitted){window.location='../portfplio_thankspage/index.html';}"></iframe>
+    <script>
+        $(function () {
+            $('.sp_btn').on('click', function () {
+                $('.sp_btn').toggleClass('open');
+                $('.header_sp_nav').fadeToggle();
+            });
+            $('.header_sp_nav a').on('click', function () {
+                $('.header_sp_nav').fadeOut();
+                $('.sp_btn').removeClass('open');
+            });
         });
-        $('.header_sp_nav a').on('click', function () {
-            $('.header_sp_nav').fadeOut();
-            $('.sp_btn').removeClass('open');
-        });
-    });
 
 
-</script>
+    </script>
+</body>
 
 </html>
